--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
     <meta property="og:locale" content="en_US"/>
     <meta property="og:description" content="Add a tailored booking functionality to your business. Build the customer experience that suits your services."/>
     <meta property="og:image" content="https://cdn.timerise.io/landing-page/og-image.png"/> -->
-    <link rel="icon" type="image/png" href="https://cdn.timerise.io/landing-page/favicon.png" data-react-helmet="true"/>
+    <link rel="icon" type="image/png" href="https://cdn.timerise.io/admin/docknock-favicon.png" data-react-helmet="true"/>
     <!-- <meta
       name="description"
       content="Booking Page."
       data-react-helmet="true"
     /> -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.webp" />
+    <link rel="apple-touch-icon" href="https://cdn.timerise.io/admin/docknock-favicon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -34,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Booking page | Timerise</title>
+    <title>Booking page</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-V0RLYJCHS8"></script>
